logs/watchdog_20251011_1945.log
[11/10/2025 19:45:01,64] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 19:45:01,86] END WATCHDOG 
